--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   text-align: center;
 }
 
+html {
+  box-sizing: border-box;
+}
+
 *,
 *::before,
 *::after {
